<resources>
    <string name="app_name">Podz</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_search">Search</string>
    <string name="title_discover">Discover</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="podcast_image">Podcast cover image</string>
    <string name="website">Website</string>
    <string name="share">Share</string>
    <string name="favourite">Favourite</string>
    <string name="latest_episode">LATEST EPISODE</string>
    <string name="previous_episode">PREVIOUS EPISODE</string>

    // string for design time
    <string name="test_podcast_name">Podcast Name</string>
    <string name="test_episode_name">Episode Name</string>
    <string name="test_upload_date">3 days ago</string>
    <string name="test_duration">1:30:34</string>
    <string name="test_link">Link</string>
    <string name="test_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="about_podcast">About this Podcast</string>

    // Tab name
    <string name="tab_best">Best</string>
    <string name="tab_self_help">Self-Help</string>
    <string name="tab_news_politic">News</string>


    <string name="search_hint">Search for podcast</string>
    <string name="play_button">episode play button</string>
    <string name="podcast_favourite_button">Add to favourite Button</string>
    <string name="loading_title">Loading</string>
    <string name="share_button">Share Podcast Button</string>
    <string name="about_episode">About Episode</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="playing">playing</string>
    <string name="remove_fav_msg">Removed from Favourite</string>
    <string name="add_fav_msg">Marked as favourite</string>
    <string name="check_network_msg">Check your internet connection</string>
    <string name="player_ad_id">ca-app-pub-3172187836765919/1449594145</string>
    <string name="ad_app_id">ca-app-pub-3172187836765919~8398145871</string>
    <string name="add_widget">Add widget</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="episode_name_image_description">Episode Thumbnail</string>
    <string name="episode_fav_button">favourite episode button</string>
    <string name="episode_link_button">episode Link button</string>
    <string name="last_played_episode">Last Played Episode</string>
    <string name="toolbar_player_title">Player</string>
</resources>
