<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v7.widget.CardView
        android:id="@+id/podcast_list_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/podcast_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/podcast_image"
                tools:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/podcast_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/bt_play"
                app:layout_constraintStart_toEndOf="@+id/podcast_image"
                app:layout_constraintTop_toTopOf="@+id/podcast_image"
                tools:text="Podcast Name" />

            <TextView
                android:id="@+id/podcast_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/podcast_name"
                app:layout_constraintTop_toBottomOf="@+id/podcast_name"
                tools:text="by Author" />

            <TextView
                android:id="@+id/podcast_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/podcast_image"
                app:layout_constraintTop_toBottomOf="@+id/podcast_image"
                tools:text="@string/test_content" />

            <ImageButton
                android:id="@+id/bt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_share"
                android:padding="@dimen/podcast_action_buttons_padding"
                android:background="@drawable/podcast_button_background"
                android:contentDescription="@string/share_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/podcast_name" />

            <ImageButton
                android:id="@+id/bt_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/podcast_button_background"
                android:padding="@dimen/podcast_action_buttons_padding"
                android:src="@drawable/ic_favorite"
                android:contentDescription="@string/podcast_favourite_button"
                app:layout_constraintEnd_toEndOf="@+id/bt_share"
                app:layout_constraintTop_toBottomOf="@+id/bt_share" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</layout>