<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:focusable="true"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:background="@color/dark_gray_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/bt_website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/bt_share"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/bt_share"
                    android:nextFocusForward="@id/bt_share"
                    android:nextFocusRight="@id/bt_share"
                    android:nextFocusDown="@id/label_abt_podcast"
                    android:text="@string/website" />

                <Button
                    android:id="@+id/bt_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/bt_favourite"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/bt_website"
                    app:layout_constraintTop_toTopOf="parent"
                    android:nextFocusForward="@id/bt_favourite"
                    android:nextFocusRight="@id/bt_favourite"
                    android:nextFocusLeft="@id/bt_website"
                    android:nextFocusDown="@id/label_abt_podcast"
                    android:text="@string/share" />

                <Button
                    android:id="@+id/bt_favourite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/bt_share"
                    app:layout_constraintTop_toTopOf="@+id/bt_share"
                    android:text="@string/favourite"
                    android:nextFocusForward="@id/label_abt_podcast"
                    android:nextFocusLeft="@id/bt_share"
                    android:nextFocusDown="@id/label_abt_podcast"/>

                <TextView
                    android:id="@+id/label_abt_podcast"
                    style="@style/header_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_website"
                    android:nextFocusForward="@id/podcast_description"
                    android:nextFocusUp="@id/bt_favourite"
                    android:nextFocusDown="@id/podcast_description"
                    tools:text="@string/about_podcast" />

                <TextView
                    android:id="@+id/podcast_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_abt_podcast"
                    style="@style/content_text_style"
                    android:nextFocusForward="@id/rv_podcast_genre"
                    android:nextFocusUp="@id/label_abt_podcast"
                    android:nextFocusDown="@id/rv_podcast_genre"
                    tools:text="@string/test_content" />

                <android.support.v7.widget.RecyclerView
                    android:focusable="true"
                    android:nextFocusForward="@id/latest_episode"
                    android:nextFocusDown="@id/latest_episode"
                    android:nextFocusUp="@id/podcast_description"
                    android:id="@+id/rv_podcast_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/podcast_description" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/latest_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                android:nextFocusUp="@id/rv_podcast_genre"
                android:nextFocusDown="@id/episode_item"
                android:nextFocusForward="@id/episode_item"
                tools:text="@string/latest_episode" />

            <android.support.v7.widget.CardView
                android:id="@+id/last_episode_item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/recyclerview_item_offset"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latest_episode">

                <include
                    android:id="@+id/episode_item"
                    layout="@layout/previous_episode_list_item" />
            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/previous_episode"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_episode_item_container"
                tools:text="@string/previous_episode" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_previous_episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previous_episode" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</layout>